tests/errors/mem-only-reads.expect
---CODE---
1
---STDERR---
Error: tests/errors/mem-only-reads.futil
4 |    mem = std_mem_d1(32, 4, 4);
  |    ^^^ [Papercut] Only reads performed on memory `mem'. Synthesis tools will remove this memory. Add @external(1) to cell to turn this into an interface memory.
